--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,13 @@
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
+	<repositories>
+	<repository>
+      <id>maven-releases</id>
+      <name>maven-releases</name>
+      <url>http://127.0.0.1:8081/repository/maven-releases/</url>
+    </repository>
+	</repositories>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
