--- a/pom.xml
+++ b/pom.xml
@@ -18,9 +18,9 @@
 	</properties>
 	<repositories>
 	<repository>
-      <id>maven-releases</id>
-      <name>maven-releases</name>
-      <url>http://127.0.0.1:8081/repository/maven-releases/</url>
+      <id>maven-snapshots</id>
+      <name>maven-snapshots</name>
+      <url>http://127.0.0.1:8081/repository/maven-snapshots/</url>
     </repository>
 	</repositories>
 	<dependencies>
